# src/collections/collections-entries/dto/get-collection-entries.dto.ts
@@ -1,4 +1,0 @@
-import { CollectionEntry } from "../entities/collection-entry.entity";
-import { BaseFindDto } from "../../../utils/base-find.dto";
-
-export class GetCollectionEntriesDto extends BaseFindDto<CollectionEntry> {}
