# src/game/game-repository/dto/game-repository-find-one.dto.ts
@@ -1,4 +1,10 @@
 import { BaseFindDto } from "../../../utils/base-find.dto";
 import { Game } from "../entities/game.entity";
+import { IsObject, IsOptional } from "class-validator";
+import { FindOptionsRelations } from "typeorm";
 
-export class GameRepositoryFindOneDto extends BaseFindDto<Game> {}
+export class GameRepositoryFindOneDto {
+    @IsOptional()
+    @IsObject()
+    relations?: FindOptionsRelations<Game>;
+}
